--- a/index.html
+++ b/index.html
@@ -370,9 +370,15 @@ window._googlesitekit = window._googlesitekit || {}; window._googlesitekit.throt
 <nav id="site-navigation" class="main-navigation header-navigation hover-to-open nav--toggle-sub header-navigation-style-underline header-navigation-dropdown-animation-fade-down" role="navigation" aria-label="Primary">
 <div class="primary-menu-container header-menu-container">
 <ul id="primary-menu" class="menu"><li id="menu-item-26" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-1111 current_page_item menu-item-26"><a href="https://goldengrovecleaning.com/" aria-current="page">Home</a></li>
-<li id="menu-item-2870" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-2870"><a href="#services" class="nav-drop-title-wrap dropdown-nav-toggle" aria-expanded="false">
+<li id="menu-item-2870" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-2870"><a <a href="#services" class="nav-drop-title-wrap dropdown-nav-toggle" aria-expanded="false">
     Services
-    <span class="dropdown-nav-toggle"></span> <!-- Keep your arrow/icon -->
+    <span class="kadence-svg-iconset svg-baseline">
+        <svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <title>Expand</title>
+            <path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
+        </svg>
+    </span>
+</a></span> <!-- Keep your arrow/icon -->
 </a><span class="kadence-svg-iconset svg-baseline"><svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>Expand</title><path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
 </svg></span></span></span></a>
 <ul class="sub-menu">
@@ -383,7 +389,15 @@ window._googlesitekit = window._googlesitekit || {}; window._googlesitekit.throt
 <li id="menu-item-5056" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5056"><a href="https://goldengrovecleaning.com/services/post-construction-cleaning/">Post Construction</a></li>
 </ul>
 </li>
-<li id="menu-item-3718" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3718"><a><span class="nav-drop-title-wrap">Cleaning Check List<span class="dropdown-nav-toggle"><span class="kadence-svg-iconset svg-baseline"><svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>Expand</title><path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
+<li id="menu-item-3718" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3718"><a><a href="#cleaning-checklist" class="nav-drop-title-wrap dropdown-nav-toggle" aria-expanded="false">
+    Cleaning Check List
+    <span class="kadence-svg-iconset svg-baseline">
+        <svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <title>Expand</title>
+            <path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
+        </svg>
+    </span>
+</a><span class="kadence-svg-iconset svg-baseline"><svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>Expand</title><path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
 </svg></span></span></span></a>
 <ul class="sub-menu">
 <li id="menu-item-4874" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4874"><a href="https://goldengrovecleaning.com/cleaning-checklist/home-cleaning-checklist/">Residential Cleaning Checklist</a></li>
