--- a/index.html
+++ b/index.html
@@ -389,7 +389,20 @@ window._googlesitekit = window._googlesitekit || {}; window._googlesitekit.throt
 <li id="menu-item-5056" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5056"><a href="https://goldengrovecleaning.com/services/post-construction-cleaning/">Post Construction</a></li>
 </ul>
 </li>
-<li id="menu-item-3718" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3718"><a><a href="#cleaning-checklist" class="nav-drop-title-wrap dropdown-nav-toggle" aria-expanded="false">
+<li id="menu-item-3718" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3718">
+    <a href="#cleaning-checklist" class="nav-drop-title-wrap dropdown-nav-toggle" aria-expanded="false">
+        Cleaning Check List  <!-- Or whatever the exact text is for this item -->
+        <span class="kadence-svg-iconset svg-baseline">
+            <svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <title>Expand</title>
+                <path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
+            </svg>
+        </span>
+    </a>
+    <ul class="sub-menu" id="cleaning-checklist">  <!-- Optional: add id to sub-menu for the # anchor -->
+        <!-- Your existing sub-menu items (Residential, Commercial, etc.) stay here unchanged -->
+    </ul>
+</li>aria-expanded="false">
     Cleaning Check List
     <span class="kadence-svg-iconset svg-baseline">
         <svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
