--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@ var rankMath = {"version":"1.0.262","ajaxurl":"https:\/\/goldengrovecleaning.com
 		<nav id="mobile-site-navigation" class="mobile-navigation drawer-navigation drawer-navigation-parent-toggle-false" role="navigation" aria-label="Primary Mobile">
 				<div class="mobile-menu-container drawer-menu-container">
 			<ul id="mobile-menu" class="menu has-collapse-sub-nav"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-1111 current_page_item menu-item-26"><a href="https://goldengrovecleaning.com/" aria-current="page">Home</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-2870"><div class="drawer-nav-drop-wrap"><a>Services</a><button class="drawer-sub-toggle" data-toggle-duration="10" data-toggle-target="#mobile-menu .menu-item-2870 &gt; .sub-menu" aria-expanded="false"><span class="screen-reader-text">Toggle child menu</span><span class="kadence-svg-iconset"><svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>Expand</title><path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-2870"><div class="drawer-nav-drop-wrap"><a href="/services/">Services</a> <button class="drawer-sub-toggle" data-toggle-duration="10" data-toggle-target="#mobile-menu .menu-item-2870 &gt; .sub-menu" aria-expanded="false"><span class="screen-reader-text">Toggle child menu</span><span class="kadence-svg-iconset"><svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>Expand</title><path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
 				</svg></span></button></div>
 <ul class="sub-menu">
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2615"><a href="https://goldengrovecleaning.com/services/house-cleaning/">Residential Cleaning</a></li>
@@ -1420,15 +1420,32 @@ var rankMath = {"version":"1.0.262","ajaxurl":"https:\/\/goldengrovecleaning.com
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5056"><a href="https://goldengrovecleaning.com/services/post-construction-cleaning/">Post Construction</a></li>
 </ul>
 </li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3718"><div class="drawer-nav-drop-wrap"><a>Cleaning Check List</a><button class="drawer-sub-toggle" data-toggle-duration="10" data-toggle-target="#mobile-menu .menu-item-3718 &gt; .sub-menu" aria-expanded="false"><span class="screen-reader-text">Toggle child menu</span><span class="kadence-svg-iconset"><svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>Expand</title><path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
-				</svg></span></button></div>
-<ul class="sub-menu">
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3718">
+  <div class="drawer-nav-drop-wrap">
+    <a href="/cleaning-checklist/">Cleaning Check List</a>
+
+    <button class="drawer-sub-toggle"
+      data-toggle-duration="10"
+      data-toggle-target="#mobile-menu .menu-item-3718 > .sub-menu"
+      aria-expanded="false"
+      <span class="screen-reader-text">Toggle child menu</span>
+      <span class="kadence-svg-iconset">
+        <svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg"
+          fill="currentColor" xmlns="http://www.w3.org/2000/svg"
+          width="24" height="24" viewBox="0 0 24 24">
+          <title>Expand</title>
+          <path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
+        </svg>
+      </span>
+    </button>
+  </div>
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4874"><a href="https://goldengrovecleaning.com/cleaning-checklist/home-cleaning-checklist/">Residential Cleaning Checklist</a></li>
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1926"><a href="https://goldengrovecleaning.com/cleaning-checklist/commercial-cleaning/">Commercial Cleaning Checklist</a></li>
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1410"><a href="https://goldengrovecleaning.com/cleaning-checklist/deep-cleaning-checklist/">Deep Cleaning Checklist</a></li>
 </ul>
 </li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-4873"><div class="drawer-nav-drop-wrap"><a href="#">Locations</a><button class="drawer-sub-toggle" data-toggle-duration="10" data-toggle-target="#mobile-menu .menu-item-4873 &gt; .sub-menu" aria-expanded="false"><span class="screen-reader-text">Toggle child menu</span><span class="kadence-svg-iconset"><svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>Expand</title><path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-4873"><div class="drawer-nav-drop-wrap"><a href="/locations/">Locations</a>
+<button class="drawer-sub-toggle" data-toggle-duration="10" data-toggle-target="#mobile-menu .menu-item-4873 &gt; .sub-menu" aria-expanded="false"><span class="screen-reader-text">Toggle child menu</span><span class="kadence-svg-iconset"><svg aria-hidden="true" class="kadence-svg-icon kadence-arrow-down-svg" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>Expand</title><path d="M5.293 9.707l6 6c0.391 0.391 1.024 0.391 1.414 0l6-6c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"></path>
 				</svg></span></button></div>
 <ul class="sub-menu">
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5174"><a href="https://goldengrovecleaning.com/locations/midland/">Midland</a></li>
