--- a/index.html
+++ b/index.html
@@ -1150,24 +1150,35 @@ gtag("config", "GT-MRMWJSSS");
 <script nitro-exclude>
     document.cookie = 'nitroCachedPage=' + (!window.NITROPACK_STATE ? '0' : '1') + '; path=/; SameSite=Lax';
 </script>	</main><!-- #inner-wrap -->
-	<footer id="colophon" class="site-footer" role="contentinfo">
-	<div class="site-footer-wrap">
-		<div class="site-middle-footer-wrap site-footer-row-container site-footer-focus-item site-footer-row-layout-standard site-footer-row-tablet-layout-default site-footer-row-mobile-layout-default" data-section="kadence_customizer_footer_middle">
-	<div class="site-footer-row-container-inner">
-				<div class="site-container">
-			<div class="site-middle-footer-inner-wrap site-footer-row site-footer-row-columns-2 site-footer-row-column-layout-left-golden site-footer-row-tablet-column-layout-default site-footer-row-mobile-column-layout-row ft-ro-dir-row ft-ro-collapse-normal ft-ro-t-dir-default ft-ro-m-dir-default ft-ro-lstyle-plain">
-									<div class="site-footer-middle-section-1 site-footer-section footer-section-inner-items-1">
-						<div class="footer-widget-area widget-area site-footer-focus-item footer-navigation-wrap content-align-left content-tablet-align-center content-mobile-align-default content-valign-middle content-tablet-valign-default content-mobile-valign-default footer-navigation-layout-stretch-false" data-section="kadence_customizer_footer_navigation">
-	<div class="footer-widget-area-inner footer-navigation-inner">
-			<nav id="footer-navigation" class="footer-navigation" role="navigation" aria-label="Footer">
-				<div class="footer-menu-container">
-			<ul id="footer-menu" class="menu"><li id="menu-item-5293" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5293"><a href="https://goldengrovecleaning.com/book-now/">Book Now</a></li>
-<li id="menu-item-4618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4618"><a href="https://goldengrovecleaning.com/contact/">Contact</a></li>
-<li id="menu-item-4619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4619"><a href="https://goldengrovecleaning.com/frequently-asked-questions/">FAQs</a></li>
-<li id="menu-item-4616" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-privacy-policy menu-item-4616"><a rel="privacy-policy" href="https://goldengrovecleaning.com/privacy-policy/">Privacy Policy</a></li>
-<li id="menu-item-5089" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5089"><a href="https://goldengrovecleaning.com/terms-and-conditions/">Terms &#038; Conditions</a></li>
-</ul>		</div>
-	</nav><!-- #footer-navigation -->
+    <footer id="colophon" class="site-footer" role="contentinfo">
+    <div class="site-footer-wrap">
+        <div class="site-middle-footer-wrap site-footer-row-container site-footer-focus-item site-footer-row-layout-standard site-footer-row-tablet-layout-default site-footer-row-mobile-layout-default" data-section="kadence_customizer_footer_middle">
+    <div class="site-footer-row-container-inner">
+                <div class="site-container">
+            <div class="site-middle-footer-inner-wrap site-footer-row site-footer-row-columns-2 site-footer-row-column-layout-left-golden site-footer-row-tablet-column-layout-default site-footer-row-mobile-column-layout-row ft-ro-dir-row ft-ro-collapse-normal ft-ro-t-dir-default ft-ro-m-dir-default ft-ro-lstyle-plain">
+                                    <div class="site-footer-middle-section-1 site-footer-section footer-section-inner-items-1">
+                        <div class="footer-widget-area widget-area site-footer-focus-item footer-navigation-wrap content-align-left content-tablet-align-center content-mobile-align-default content-valign-middle content-tablet-valign-default content-mobile-valign-default footer-navigation-layout-stretch-false" data-section="kadence_customizer_footer_navigation">
+    <div class="footer-widget-area-inner footer-navigation-inner">
+            <nav id="footer-navigation" class="footer-navigation" role="navigation" aria-label="Footer">
+                <div class="footer-menu-container">
+            <ul id="footer-menu" class="menu">
+                <li id="menu-item-5293" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5293">
+                    <a href="https://goldengrovecleaning.com/book-now/" style="color: #000000 !important;">Book Now</a>
+                </li>
+                <li id="menu-item-4618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4618">
+                    <a href="https://goldengrovecleaning.com/contact/" style="color: #000000 !important;">Contact</a>
+                </li>
+                <li id="menu-item-4619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4619">
+                    <a href="https://goldengrovecleaning.com/frequently-asked-questions/" style="color: #000000 !important;">FAQs</a>
+                </li>
+                <li id="menu-item-4616" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-privacy-policy menu-item-4616">
+                    <a rel="privacy-policy" href="https://goldengrovecleaning.com/privacy-policy/" style="color: #000000 !important;">Privacy Policy</a>
+                </li>
+                <li id="menu-item-5089" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5089">
+                    <a href="https://goldengrovecleaning.com/terms-and-conditions/" style="color: #000000 !important;">Terms &#038; Conditions</a>
+                </li>
+            </ul>		</div>
+    </nav><!-- #footer-navigation -->
 		</div>
 </div><!-- data-section="footer_navigation" -->
 					</div>
@@ -1196,8 +1207,8 @@ gtag("config", "GT-MRMWJSSS");
 									<div class="site-footer-bottom-section-1 site-footer-section footer-section-inner-items-1">
 						
 <div class="footer-widget-area site-info site-footer-focus-item content-align-center content-tablet-align-center content-mobile-align-default content-valign-middle content-tablet-valign-default content-mobile-valign-default" data-section="kadence_customizer_footer_html">
-	<div class="footer-widget-area-inner site-info-inner">
-		<div class="footer-html inner-link-style-normal"><div class="footer-html-inner"><p>&copy; 2026 Golden Grove Cleaning. Powered by <a href="https://zadaptsystems.com/">Zadapt Systems</a>.</p>
+    <div class="footer-widget-area-inner site-info-inner">
+        <div class="footer-html inner-link-style-normal"><div class="footer-html-inner"><p>&copy; 2026 Golden Grove Cleaning. Powered by <a href="https://zadaptsystems.com/" style="color: #000000 !important;">Zadapt Systems</a>.</p>
 </div></div>	</div>
 </div><!-- .site-info -->
 					</div>
